--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -38,8 +38,12 @@ jobs:
     if: github.event_name == 'push' && github.ref == 'refs/heads/main'
 
     steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
       - name: Create a release if not one exist for current version
         env:
+          GH_TOKEN: ${{ github.token }}
           TARGET: x86_64-unknown-linux-gnu
         run: |
           version='${{ needs.build-and-test.outputs.version }}'
