--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -12,6 +12,7 @@ jobs:
   build-and-test:
     name: Build and test
     runs-on: ubuntu-latest
+    if: github.event_name == 'pull_request'
     outputs:
       version: ${{ steps.version.outputs.value }}
 
@@ -41,9 +42,12 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
+      - name: Cargo test
+        run: cargo test
+
       - name: Create a release if not one exist for current version
         env:
-          GH_TOKEN: ${{ github.token }}
+          GH_TOKEN: ${{ secrets.GH_TOKEN }}
           TARGET: x86_64-unknown-linux-gnu
         run: |
           version='${{ needs.build-and-test.outputs.version }}'
@@ -57,4 +61,4 @@ jobs:
           cargo build --release --target "$TARGET"
 
           name=$(echo '${{ github.repository }}' | awk -F '/' '{print $2}')
-          gh release create -- "target/${TARGET}/release/${name}"
+          gh release create --generate-notes "target/${TARGET}/release/${name}"
